syntax = "proto3";

package todo;

service TodoService {
  rpc FindAll (Empty) returns (TodoList) {}
  rpc FindOne (TodoById) returns (Todo) {}
  rpc Create (CreateTodoDto) returns (Todo) {}
  rpc Update (UpdateTodoDto) returns (Todo) {}
  rpc Remove (TodoById) returns (Empty) {}
}

message Empty {}

message Todo {
  string id = 1;
  string title = 2;
  bool completed = 3;
}

message TodoList {
  repeated Todo todos = 1;
}

message TodoById {
  string id = 1;
}

message CreateTodoDto {
  string title = 1;
}

message UpdateTodoDto {
  string id = 1;
  string title = 2;
  bool completed = 3;
}